make operation results behave like images